--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 This the 2nd line of code.
 This is the 3rd line of code.
 This is the 4th line of code.
+This is the 7th line of code.
+This is the 8th line of code.
